--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Portfolio">
     <meta property="og:image" content="https://github.com/Directoire/under-construction-template/raw/master/demo.png">
-    <title>Home · Hendrik</title>
+    <title>Home · Blake McGuire</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="./static/vendor/bootstrap/css/bootstrap.css">
