--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 </head>
 <body>
     <div class="container vh-100">
-        <div class="text-center">
+        <div class="text-center" style="
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+    position: relative;
+">
             <img src="./static/img/construction.svg" class="h-50">
             <h1>Coming Soon</h1>
             <p>Blake and friends are currently working hard building this page!</p>
