--- a/index.html
+++ b/index.html
@@ -24,15 +24,8 @@
 </head>
 <body>
     <div class="container vh-100">
-        <div class="text-center" style="
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100%;
-    align-items: center;
-    position: relative;
-">
-            <img src="./static/img/construction.svg" class="h-50">
+        <div class="text-center">
+            <img src="./static/img/construction.svg">
             <h1>Coming Soon</h1>
             <p>Blake and friends are currently working hard building this page!</p>
             <a href="https://www.linkedin.com/in/blakejordanmcguire/" class="btn btn-primary mt-3">Back to LinkedIn</a>
