Add styling classes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
-    <div class="container vh-100">
-        <div class="text-center">
+    <div class="container home-page vh-100">
+        <div class="text-center coming-soon">
             <img src="./static/img/construction.svg">
             <h1>Coming Soon</h1>
             <p>Blake and friends are currently working hard building this page!</p>
