Major update to v1 off of the 'under construction' page.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,48 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
+
 <head>
-
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FW0XJWS0WX"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-FW0XJWS0WX');
-    </script>
-
-
-    <!-- META -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="Portfolio">
-    <meta property="og:image" content="https://github.com/Directoire/under-construction-template/raw/master/demo.png">
-    <title>Home · Blake McGuire</title>
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="./static/vendor/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="./static/css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/d2a62e55fb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="static/css/style.css" />
 </head>
-<body> 
-    <div class="container home-page vh-100">
-        <div class="text-center coming-soon">
-            <img src="./static/img/construction.svg">
-            <h1>Coming Soon</h1>
-            <p>Blake and friends are currently working hard building this page!</p>
-            <a href="https://www.linkedin.com/in/blakejordanmcguire/" class="btn btn-primary mt-3">Back to LinkedIn</a>
-        </div>
+
+<body class="flexcontainer">
+
+    <div id="hero">
+        Blake McGuire
     </div>
+
+    <div class="content">
+        <div>
+            <img src="static/img/headshot.png" />
+        </div>
+        <div>
+            <p>A leadership professional with a passion for lifelong learning and a lot of side projects.</p>
+            <p>This site is currently under development.  Look forward to more information about my personal and professional projects and some blog posts in the near future.</p>
+        </div>
+
+    </div>
+
+    <div class="footer">
+        <ul class="social-container">
+            <li>
+                <a class="social-link" href="mailto:blake@blakemcguire.com">
+                    <i class="fa-solid fa-envelope fa-3x"></i>
+                </a>
+            </li>
+            <li>
+                <a class="social-link" href="https://www.linkedin.com/in/blakejordanmcguire">
+                    <i class="fa-brands fa-linkedin fa-3x"></i>
+                </a>
+            </li>
+            <li>
+                <a class="social-link" href="https://github.com/blakejmcguire">
+                    <i class="fa-brands fa-square-github fa-3x"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+
 </body>
 </html>
