--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
 
         <img src="static/img/headshot.png" />
 
-        <p>A leadership professional with a passion for lifelong learning and a lot of side projects.</p>
+        <div>
+            <p>A leadership professional with a passion for lifelong learning and a lot of side projects.</p>
 
-        <p>This site is currently under development.  Look forward to more information about my personal and professional projects and some blog posts in the near future.</p>
-
+            <p>This site is currently under development.  Look forward to more information about my personal and professional projects and some blog posts in the near future.</p>
+        </div>
 
     </div>
 
