--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="row p-3 hero-content">
       <div class="col offset-md-4 offset-sm-5 d-flex flex-column justify-content-center">
         <div style="max-width: 550px">
-          <h1 class="display-6 lh-lg">Always learning,<br class="d-md-none"/> always growing</h1>
+          <h1 class="display-6 lh-lg">Learning<br class="d-md-none"/> and growing</h1>
           <p class="lead">Always trying something new, from small web applications to motorcycles.</p>
         </div>
       </div>
