--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-539WWRG');</script>
+    })(window, document, 'script', 'dataLayer', 'GTM-WQX9G66');</script>
   <!-- End Google Tag Manager -->
 
   <meta charset="utf-8">
@@ -28,7 +28,7 @@
 <body>
 
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-539WWRG" height="0" width="0"
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WQX9G66" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
@@ -52,7 +52,8 @@
         </div>
         <div class="flex-grow-1 d-flex align-items-center justify-content-start justify-content-sm-end">
           <a href="mailto:blake@blakemcguire.com" class="social-link-nav m-1 p-2">
-            <img src="assets/icons/square-envelope-solid.svg"class="social-icon" alt="email icon" style="height: 1.5rem">
+            <img src="assets/icons/square-envelope-solid.svg" class="social-icon" alt="email icon"
+              style="height: 1.5rem">
           </a>
           <a href="https://github.com/blakejmcguire/" class="social-link-nav m-1 p-2">
             <img src="assets/icons/github.svg" class="social-icon" alt="email icon" style="height: 1.5rem">
@@ -74,7 +75,7 @@
     <div class="row p-3 hero-content">
       <div class="col offset-md-4 offset-sm-5 d-flex flex-column justify-content-center">
         <div style="max-width: 550px">
-          <h1 class="display-6 lh-lg">Learning<br class="d-md-none"/> and growing</h1>
+          <h1 class="display-6 lh-lg">Learning<br class="d-md-none" /> and growing</h1>
           <p class="lead">Always trying something new, from small web applications to motorcycles.</p>
         </div>
       </div>
@@ -93,7 +94,8 @@
     <div class="row d-flex p-1 justify-content-evenly">
       <div class="col d-flex align-items-stretch">
         <div class="card m-2">
-          <img src="assets/card-headers/alexander-grey-8lnbXtxFGZw-unsplash.jpg" class="card-img-top" alt="money card header" />
+          <img src="assets/card-headers/alexander-grey-8lnbXtxFGZw-unsplash.jpg" class="card-img-top"
+            alt="money card header" />
           <div class="card-body">
             <h5 class="card-title">Budget Manager</h5>
             <p class="card-text">A simple application for managing personal cashflow against regular spending.</p>
@@ -113,7 +115,8 @@
       </div>
       <div class="col d-flex align-items-stretch">
         <div class="card m-2">
-          <img src="assets/card-headers/absolutvision-82TpEld0_e4-unsplash.jpg" class="card-img-top" alt="sticky note card header"/>
+          <img src="assets/card-headers/absolutvision-82TpEld0_e4-unsplash.jpg" class="card-img-top"
+            alt="sticky note card header" />
           <div class="card-body">
             <h5 class="card-title">Notes in a Jar</h5>
             <p class="card-text">A web application for scribbling down those little things you want to keep for later.
@@ -152,7 +155,8 @@
               <p class="card-text">10+ years in roles spanning sales, management, and ecommerce.</p>
           </div>
           <div class="card-body">
-            <a href="https://www.linkedin.com/in/blakejordanmcguire/" class="card-link social-link">Details on LinkedIn</a>
+            <a href="https://www.linkedin.com/in/blakejordanmcguire/" class="card-link social-link">Details on
+              LinkedIn</a>
           </div>
         </div>
       </div>
