Added link to budget-app

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <div class="card-body">
             <h5 class="card-title">Budget Manager</h5>
             <p class="card-text">A simple application for managing personal cashflow against regular spending.</p>
-            <a href="#" class="stretched-link"></a>
+            <a href="https://budget.blakemcguire.com/" class="stretched-link"></a>
           </div>
         </div>
       </div>
